--- a/ui/components/vm-detail/aws-vm-advanced-details.html
+++ b/ui/components/vm-detail/aws-vm-advanced-details.html
@@ -9,11 +9,11 @@
       <table>
         <tr>
           <td>Instance</td>
-          <td>[[vm.aws_vm.instance_id]]</td>
+          <td>[[vm.instance_id]]</td>
         </tr>
         <tr>
           <td>Security group</td>
-          <td>[[vm.aws_vm.security_group_id]]</td>
+          <td>[[vm.security_group_id]]</td>
         </tr>
       </table>
     </div>
@@ -22,11 +22,11 @@
       <table>
         <tr>
           <td>Region</td>
-          <td>[[vm.aws_vm.region]]</td>
+          <td>[[vm.region]]</td>
         </tr>
         <tr>
           <td>Reservation</td>
-          <td>[[vm.aws_vm.reservation_id]]</td>
+          <td>[[vm.reservation_id]]</td>
         </tr>
       </table>
     </div>
