load vm-specific audit-logs; vm-creation to close dialog and refresh vm-list; convenience vmurl()

--- a/ui/components/audit-display/audit-display.html
+++ b/ui/components/audit-display/audit-display.html
@@ -17,7 +17,7 @@
     <iron-ajax
       id="ajax"
       url="[[auditUrl(vm)]]"
-      params='{"page":"1", "min_level":"1-INFO"}'
+      params='[[defaultParams(vm)]]'
       handle-as="json"
       last-response="{{pageData}}"
       auto>
