--- a/ui/components/create-vm/create-vm.html
+++ b/ui/components/create-vm/create-vm.html
@@ -34,13 +34,13 @@
   <iron-ajax
     auto
     id="providersDummy"
-    url="[[providersDummyUrl]]"
+    url="[[providersDummyUrl()]]"
     last-response="{{providersDummy}}">
   </iron-ajax>
   <iron-ajax
     auto
     id="providersAws"
-    url="[[providersAwsUrl]]"
+    url="[[providersAwsUrl()]]"
     last-response="{{providersAws}}">
   </iron-ajax>
 
