audit-display vm-param defined to initialize element

--- a/ui/components/audit-display/audit-display.html
+++ b/ui/components/audit-display/audit-display.html
@@ -17,7 +17,7 @@
     <iron-ajax
       id="ajax"
       url="[[auditUrl(vm)]]"
-      params='[[defaultParams(vm)]]'
+      params="[[defaultParams(vm)]]"
       handle-as="json"
       last-response="{{pageData}}"
       auto>
