--- a/vimma/templates/vimma/index.html
+++ b/vimma/templates/vimma/index.html
@@ -74,7 +74,7 @@
 
             <section data-route="audit">
               <paper-material elevation="1">
-                <audit-display page-size="20" page="1"></audit-display>
+                <audit-display page-size="20" page="1" vm=""></audit-display>
               </paper-material>
             </section>
 
